# BedrockPy

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  CODE_OF_CONDUCT.md  README.md  vcpkgResponseFile.txt
.github/workflows/: blank.yml  build.yml  build_release.yml
BedrockPy/: CMakeLists.txt  hello_world.cpp  version.hpp  version.hpp.in
BedrockPy/Base/: BedrockPy.cpp  BedrockPy.hpp  BedrockPy_Core_Tools.cpp  BedrockPy_Core_Tools.hpp  CMakeLists.txt  pyRequirements.txt
BedrockPy/LibHook/: CMakeLists.txt  DetoursDll.cpp  DetoursDll.hpp  Loader.cpp  Loader.hpp
BedrockPy/LibPDB/: CMakeLists.txt  PDB.cpp  PDB.h  dllmain.cpp
BedrockPy/Python/: CMakeLists.txt
BedrockPy/Python/BedrockPy_Core/: __init__.py
BedrockPy/Python/BedrockPy_Core/HookManager/: ctype.py  hook.py
Chakra/: CMakeLists.txt  Chakra.cpp  Chakra.hpp  forward.cpp
cmake/: Deps.cmake  Utils.cmake  install_dependency.cmake
tools/: Python.cmake  bds.cmake  dlbds.py  pack.py
